fix footer alignment issue in different versions of CKAN

--- a/ckanext/fedorkg/static/css/fedorkg-custom.css
+++ b/ckanext/fedorkg/static/css/fedorkg-custom.css
@@ -63,7 +63,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: -0.75rem;
   border-top: #eee solid 1px;
 }
 
